Control panel: Alignment of icons fixed

--- a/media/com_rsgallery2/css/backend/controlPanel.scss
+++ b/media/com_rsgallery2/css/backend/controlPanel.scss
@@ -33,7 +33,7 @@ div.rsg2logo img {
 }
 
 div.quickicon-icon {
-	position: relative;
+//	position: relative;
 	left: -8px;
 }
 
@@ -66,6 +66,13 @@ div.quickicon-icon div.fa-cogs
 	color: map-get($rsg2-colors, red);
 }
 
+
+flex-buttons-table {
+
+/*	flex-basis: 0; /**/
+
+}
+
 /* border-radius: 25px; */
 li.quickicon-single
 {
@@ -89,6 +96,9 @@ li.quickicon-single
 	// margin-right: auto;
 	// margin: 4px; /**/
 	margin: 0 8px 0 0; /**/
+
+/*	flex-basis: 0; /**/
+	flex: 1;
 }
 
 li.quickicon-single:hover {
@@ -100,6 +110,8 @@ li.quickicon-single:hover {
 
 li.quickicon-single a {
 	text-decoration: none;
+/*	flex-basis: 0; /**/
+
 }
 
 li.quickicon-single:hover .quickicon-text {
@@ -114,6 +126,8 @@ li.quickicon-single:hover .quickicon-icon div.fa {
 
 li.quickicon-single:link {
 //	text-decoration: none;
+/*	flex-basis: 0; /**/
+
 }
 
 
@@ -122,7 +136,8 @@ div.quickicon-icon
 {
 	font-size: xx-large;
 
-	text-align: center;
+//	text-align: center;
+	text-align: left;
 
 /*	width: 5em;  /**/
 	width: auto;  /**/
@@ -134,8 +149,18 @@ div.quickicon-icon
 
 /*	border-radius: 5px; /**/
 
-	padding: 4px; /**/
-	margin: 4px; /**/
+	padding: 0 4px; /**/
+	margin: 0 4px; /**/
+
+/*	flex-basis: 0; /**/
+
+}
+.quickicon .quickicon-name {
+
+	padding: 0 4px; /**/
+	margin: 0 4px; /**/
+
+
 
 }
 
